--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="info_label_text_color">#FFFFFF</color>
+
+    <color name="active_tab_color">#fabbbb</color>
 </resources>
